2008-09-16  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gdesktopappinfo.c (g_desktop_app_info_new_from_keyfile):
	Fix trivial typo to unbreak the build (there was a colon
	instead of a semicolon at the end of a statement).

2008-09-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 552352 – g_app_info_launch doesn't work if "Path" key in .desktop 
	file is empty

	* gdesktopappinfo.c (g_desktop_app_info_new_from_keyfile): Ignore
	an empty Path value.  

2008-09-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 551681 – g_content_type_guess() too naive with filenames

	* gcontenttype.c (g_content_type_guess): Check whether there's a '/'
	at the end of the filename, and declare it a directory.
	Patch by Bastien Nocera

2008-09-14  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 551887 – Docs for g_desktop_app_info_new_from_filename ()
	aren't clear.

	* gdesktopappinfo.c: add a note in the docs clarifying what the
	"filename" parameter really is.

2008-09-12  Tor Lillqvist  <tml@novell.com>

	* gwin32appinfo.c (g_win32_app_info_launch): Don't call
	FormatMessage() etc here. Call g_win32_error_message() instead
	which already does all that. Besides, the code was broken as it
	called the default "A" version of FormatMessage() but still
	thought it produced a wide string.

2008-09-12  Michael Natterer  <mitch@imendio.com>

	* gfileinfo.c (g_file_info_get_content_type): remove dangling 's'
	in the documentation.

2008-09-08  Christian Neumair  <cneumair@gnome.org>

	* gunixmount.c (eject_unmount_read_error), (eject_unmount_do):
	* gunixvolume.c (eject_mount_read_error), (eject_mount_do):
	Use non-blocking pipe for mount helper I/O. Fixes #550647.

2008-09-06  Matthias Clasen  <mclasen@redhat.com>

	Bug 551149 – xdgmime mem leak

	* xdgmime/xdgmime.c (xdg_mime_init_from_directory): Plug
	a memory leak. Patch by Christian Persch

2008-09-04  Tor Lillqvist  <tml@novell.com>

	* gwin32mount.c (g_win32_mount_finalize): Don't unref icon if
	NULL.
